changed the slideshow

--- a/style.css
+++ b/style.css
@@ -159,6 +159,14 @@ ul {
       align-items: center;
   }
 
+  div.swiper-button-next,
+   div.swiper-button-prev,
+   div.swiper-button-next:after,
+   div.swiper-button-prev:after {
+    color: var(--highlight-color);
+    font-size: var(--navFontSize);
+  }
+
   div.series ul li {
     padding: 0.5em;
   }
