--- a/style.css
+++ b/style.css
@@ -1,24 +1,25 @@
-      * {
+      :root  {
             --headerFontSize: 1.5rem;
             --headerPadding: 0.5rem;
             --navFontSize: 1.2rem;
             --navPadding:0.5rem;
             --footerFontSize: 1.2rem;
             --footerPadding: 0.5rem;
+
+            --main-color: #ffffff;
+            --text-color: #000000;
+            --highlight-color: #B3C4DE;
+
+            --nav-link: rgba(0, 0, 17, 0.6);
+            --nav-link-selected: rgba(0, 0, 17, 1);
+            --nav-underline: rgba(0, 0, 17, 0.1);
+            --nav-underline-hover: rgba(0, 0, 17, 1);
+
+            --timing: 0.25s;
+            --bezier: cubic-bezier(0.215, 0.61, 0.355, 1);
         }
 
 
-        :root {
-          --main-color: #ffffff;
-          --text-color: #000000;
-          --highlight-color: #B3C4DE;
-        }
-
-        /* body.dark-mode {
-          --main-color: #000000;
-          --text-color: #ffffff;
-          --highlight-color: #ff4141;
-        } */
 
         body {
         	font-family: 'Cormorant Garamond', sans-serif;
@@ -65,11 +66,20 @@
             transition: transform 0.5s;
         }
 
-    #index {
-          background-image: url(hero.png);
-          background-position: center center;
-          background-repeat: no-repeat;
-          background-size: cover;
+        .full {
+          grid-column: span 6;
+        }
+
+        .full-img {
+          height: calc(
+                90vh
+                - var(--headerFontSize)
+                - (2 * var(--headerPadding))
+                - var(--footerFontSize)
+                - (2 * var(--footerPadding))
+            );
+          width: 100%;
+          object-fit: cover;
         }
 
 
@@ -86,43 +96,42 @@
           transform: translate(-100px, 0);
         }
 
-h1 {
-  font-size: 24px;
-  font-weight: 100;
-  text-transform: uppercase;
-}
+      h1 {
+        font-size: 24px;
+        font-weight: 100;
+        text-transform: uppercase;
+      }
+
+      a {
+        color: var(--text-color);
+        font-size: var(--navFontSize);
+        text-decoration: none;
+        transition: color var(--timing) var(--bezier);
+        padding-left: var(--headerPadding);
+        text-decoration: none;
+      }
+
+      a:hover, a.selected {
+        border-bottom-color: var(--nav-underline-hover);
+        color: var(--highlight-color);
+      }
+
+      a.selected {
+        color: var(--highlight-color);
+      }
+
+      section {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
 
-
-a {
-  color: var(--text-color);
-  font-size: var(--navFontSize);
-  text-decoration: none;
-  transition: color 0.25s;
-  padding-left: var(--headerPadding);
-}
-
-a:hover {
-  color: var(--highlight-color);
-}
-
-nav{
-  display: flex;
-  justify-content: space-between;
-}
-
-.animate {
-    filter: grayscale(0) brightness(1);
-}
-
-
-/* photo */
-
-
-
-#photo {
-  display: flex;
-}
+/* pages */
 
 ul {
   text-transform: capitalize;
@@ -132,7 +141,7 @@ ul {
   line-height: 1.4rem;
 }
 
-.swiper-container {
+  .swiper-container {
       width: 100%;
       height: 100%;
       margin-left: auto;
@@ -160,9 +169,9 @@ ul {
   }
 
   div.swiper-button-next,
-   div.swiper-button-prev,
-   div.swiper-button-next:after,
-   div.swiper-button-prev:after {
+  div.swiper-button-prev,
+  div.swiper-button-next:after,
+  div.swiper-button-prev:after {
     color: var(--highlight-color);
     font-size: var(--navFontSize);
   }
@@ -171,9 +180,7 @@ ul {
     padding: 0.5em;
   }
 
-
-
-div.slider {
+  div.slider {
   display: grid;
   grid-template-rows: 160px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -185,29 +192,6 @@ img {
   grid-row: span 2 ;
 }
 
-
-#contact {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-end;
-}
-
-#contact div {
-  width: 50%;
-  position: relative;
-}
-
-div.contact-details ul {
-transform: translate(50%);
-}
-
-div.img img {
-  width: 25vw;
-  transform: translate(-50%);
-}
-
-
 #video div.vid {
   width: 70%;
   height: 70%;
@@ -215,23 +199,48 @@ div.img img {
   margin-right: auto;
 }
 
-/* a.dark-mode-toggle {
-  bottom: 32px;
-  left: 32px;
+section.contact {
+  justify-content: center;
+  align-items: center;
 }
 
-a.dark-mode-toggle circle {
-  fill: currentColor;
+div.img img {
+  width: 25vw;
 }
-
-a.dark-mode-toggle rect {
-  stroke: currentColor;
-} */
-
 
 a.menu-toggle{
   display: none;
 }
+
+
+.fade-leave-active,
+.fade-enter-active,
+.fade-once-active {
+  transition: opacity var(--timing) var(--bezier), transform var(--timing) var(--bezier);
+}
+
+.fade-leave {
+  opacity: 1;
+  transform: translate(0,0);
+}
+
+.fade-leave-to {
+  opacity: 0;
+  transform: translate(0,30px);
+}
+
+.fade-enter,
+.face-once {
+  opacity: 0;
+  transform: translate(0,30px);
+}
+
+.fade-enter-to,
+.fade-once-to {
+  opacity: 1;
+  transform: translate(0,0);
+}
+
 
 @media (max-width: 800px) {
 
@@ -264,25 +273,15 @@ a.menu-toggle{
     z-index: 1;
   }
 
-  /* nav.fake-mid {
-    background-color: var(--highlight-color);
-    transition-delay: 0.1s;
-  } */
-
   nav.fake-back {
     background-color: var(--text-color);
     transition-delay: 0.2s;
   }
 
-
   body.nav-open nav {
     transform: translate(0, 0);
     transition-delay: 0.2s;
   }
-
-  /* body.nav-open nav.fake-mid {
-    transition-delay: 0.1s;
-  } */
 
   body.nav-open nav.fake-back {
     transition-delay: 0s;
@@ -299,18 +298,27 @@ a.menu-toggle{
     flex: 1;
   }
 
+
+
+
 #index {
     background-size: cover;
     background-position: 80% 5%;
   }
 
-  #contact {
+section.photo {
     display: flex;
     flex-direction: column;
+    align-items: center;
+  }
 
+section.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#contact div {
+.contact div {
   width: 80%;
 }
 
@@ -318,10 +326,6 @@ div.img img {
   width: 100vw;
 }
 
-#photo {
-  display: flex;
-  flex-direction: column;
-}
 div.series ul {
   display: flex;
 }
@@ -329,20 +333,30 @@ div.series ul li {
   padding: 1em;
 }
 
-
 }
 
 
-
-
-svg {
-  vertical-align: middle;
+@keyframes fade {
+  0% {
+  opacity: 0;
+  transform: translate(0,30px);
+  }
+  100% {
+  opacity: 1;
+  transform: translate(0,0);
+  }
 }
 
-a.dark-mode-toggle g.toggle circle {
-  transition: transform 0.5s;
+header,
+footer {
+  animation: fade var(--timing) var(--bezier) both;
 }
 
-a.dark-mode-toggle:hover g.toggle circle {
-  transform: scale(1.75);
+
+header {
+  animation-delay: var(--timing);
+}
+
+footer {
+  animation-delay: calc(2*var(--timing));
 }
